--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/sprunki.loader.js";
       var config = {
-        dataUrl: buildUrl + "/sprunki.data.br",
-        frameworkUrl: buildUrl + "/sprunki.framework.js.br",
-        codeUrl: buildUrl + "/sprunki.wasm.br",
+        dataUrl: buildUrl + "/sprunki.data",
+        frameworkUrl: buildUrl + "/sprunki.framework.js",
+        codeUrl: buildUrl + "/sprunki.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Default Company",
         productName: "Spunki",
